move table functions out into their own file. move back tag exporting as it has some custom flag logic built in from output_pgsql_t flags

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,6 +30,7 @@ osm2pgsql_SOURCES = osm2pgsql.cpp \
 	reprojection.hpp \
 	sanitizer.hpp \
 	sprompt.hpp \
+	table.hpp \
 	text-tree.hpp \
 	util.hpp
 
@@ -64,6 +65,7 @@ libosm2pgsql_la_SOURCES = \
 	rb.cpp \
 	reprojection.cpp \
 	sprompt.cpp \
+	table.cpp \
 	taginfo.cpp \
 	tagtransform.cpp \
 	text-tree.cpp \
