Added first pass attempt at `output_multi_t`.
This is an output which manages a single table and processes
geometry in a configurable way using the companion
`geometry_processor` object. It's just a bare-bones thing at the
moment, and definitely doesn't work.

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,6 +43,7 @@ libosm2pgsql_la_SOURCES = \
 	buffer.cpp \
 	build_geometry.cpp \
 	expire-tiles.cpp \
+	geometry-processor.cpp \
 	input.cpp \
 	keyvals.cpp \
 	middle.cpp \
@@ -54,6 +55,7 @@ libosm2pgsql_la_SOURCES = \
 	osmtypes.cpp \
 	output.cpp \
 	output-gazetteer.cpp \
+	output-multi.cpp \
 	output-null.cpp \
 	output-pgsql.cpp \
 	parse.cpp \
