Added point processor for multi-table output.
The point processor just looks at nodes to determine the output -
we should have another one which is able to do centroids for
matching types.

Added a test case for this and factored out a bunch of common code
for setting up test databases.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ tests/test-middle-ram
 tests/test-middle-pgsql
 tests/test-pgsql-escape
 tests/test-parse-options
+tests/test-output-multi-point
 tests/*.log
 tests/*.trs
 
