--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,10 @@ tests/test-middle-ram
 tests/test-middle-pgsql
 tests/test-pgsql-escape
 tests/test-parse-options
+tests/test-output-multi-line
 tests/test-output-multi-point
 tests/test-output-multi-point-multi-table
+tests/test-output-multi-polygon
 tests/*.log
 tests/*.trs
 
