--- a/Makefile.am
+++ b/Makefile.am
@@ -65,8 +65,9 @@ libosm2pgsql_la_SOURCES = \
 	parse-xml2.cpp \
 	pgsql.cpp \
 	pgsql-id-tracker.cpp \
-	processor-point.cpp \
 	processor-line.cpp \
+	processor-point.cpp \
+	processor-polygon.cpp \
 	rb.cpp \
 	reprojection.cpp \
 	sprompt.cpp \
@@ -87,6 +88,7 @@ check_PROGRAMS = \
 	tests/test-output-multi-line \
 	tests/test-output-multi-point \
 	tests/test-output-multi-point-multi-table \
+	tests/test-output-multi-polygon \
 	tests/test-pgsql-escape \
 	tests/test-parse-options
 
@@ -102,6 +104,8 @@ tests_test_output_multi_point_SOURCES = tests/test-output-multi-point.cpp tests/
 tests_test_output_multi_point_LDADD = libosm2pgsql.la
 tests_test_output_multi_point_multi_table_SOURCES = tests/test-output-multi-point-multi-table.cpp tests/common-pg.cpp
 tests_test_output_multi_point_multi_table_LDADD = libosm2pgsql.la
+tests_test_output_multi_polygon_SOURCES = tests/test-output-multi-polygon.cpp tests/common-pg.cpp
+tests_test_output_multi_polygon_LDADD = libosm2pgsql.la
 tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
 tests_test_pgsql_escape_LDADD = libosm2pgsql.la
 tests_test_parse_options_SOURCES = tests/test-parse-options.cpp
@@ -152,6 +156,7 @@ tests_test_middle_pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_line_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_point_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_point_multi_table_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_output_multi_polygon_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_options_LDADD += $(GLOBAL_LDFLAGS)
 nodecachefilereader_LDADD += $(GLOBAL_LDFLAGS)
