add an in memory id tracker for pending ways and rels brings performance way back up at the cost of memory of course. start adding pending tracking to output multi.

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,7 @@ libosm2pgsql_la_SOURCES = \
 	expire-tiles.cpp \
 	geometry-builder.cpp \
 	geometry-processor.cpp \
+	id-tracker.cpp \
 	input.cpp \
 	keyvals.cpp \
 	middle.cpp \
