Add test for pgsql output.
This includes cloning the output, and turned up a couple of bugs
with initialising `table_t` as a copy.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ tests/test-output-multi-line
 tests/test-output-multi-point
 tests/test-output-multi-point-multi-table
 tests/test-output-multi-polygon
+tests/test-output-pgsql
 tests/*.log
 tests/*.trs
 
