--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ tests/test-output-pgsql
 tests/test-expire-tiles
 tests/*.log
 tests/*.trs
+tests/test_output_pgsql_area_way.flat.nodes.bin
 
 .libs/
 *.lo
