--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,27 @@ compiler:
   - gcc
   - clang
 env:
-  - USE_LUA=true
-  - USE_LUA=false
+  - USE_LUA=true  BOOST_PPA=false
+  - USE_LUA=true  BOOST_PPA=1.54
+  - USE_LUA=true  BOOST_PPA=1.55
+# Skip some parts of the matrix for speed
+#  - USE_LUA=false BOOST_PPA=false
+#  - USE_LUA=false BOOST_PPA=1.54
+  - USE_LUA=false BOOST_PPA=1.55
 before_install:
-  - sudo add-apt-repository -y ppa:boost-latest/ppa
+  - |-
+    if [ "${BOOST_PPA}" != "false" ]; then
+      sudo add-apt-repository -y ppa:boost-latest/ppa
+    fi
   - sudo apt-get update -qq
 install: 
   - sudo apt-get install -y -qq autoconf automake libtool make g++ libpq-dev libxml2-dev libbz2-dev libproj0 proj-bin libproj-dev # core deps
-  - sudo apt-get install -y -qq boost1.55 
+  - |-
+    if [ "${BOOST_PPA}" = "false" ]; then
+      sudo apt-get install -y -qq libboost1.48-all-dev
+    else
+      sudo apt-get install -y -qq boost${BOOST_PPA}
+    fi
   - sudo apt-get install -y -qq protobuf-c-compiler libprotobuf-c0-dev
   - sudo apt-get install -y -qq libgeos-3.3.3 libgeos-dev libgeos++-dev
   - |-
