Add a test for hstore-match-only mode
This will also test the correct function of the hstore flag
given in styles

--- a/Makefile.am
+++ b/Makefile.am
@@ -91,7 +91,8 @@ check_PROGRAMS = \
 	tests/test-output-pgsql \
 	tests/test-pgsql-escape \
 	tests/test-parse-options \
-	tests/test-expire-tiles
+	tests/test-expire-tiles \
+	tests/test-hstore-match-only
 
 tests_test_parse_xml2_SOURCES = tests/test-parse-xml2.cpp
 tests_test_parse_xml2_LDADD = libosm2pgsql.la
@@ -107,6 +108,8 @@ tests_test_output_multi_point_multi_table_SOURCES = tests/test-output-multi-poin
 tests_test_output_multi_point_multi_table_LDADD = libosm2pgsql.la
 tests_test_output_multi_polygon_SOURCES = tests/test-output-multi-polygon.cpp tests/common-pg.cpp
 tests_test_output_multi_polygon_LDADD = libosm2pgsql.la
+tests_test_hstore_match_only_SOURCES = tests/test-hstore-match-only.cpp tests/common-pg.cpp
+tests_test_hstore_match_only_LDADD = libosm2pgsql.la
 tests_test_output_pgsql_SOURCES = tests/test-output-pgsql.cpp tests/common-pg.cpp
 tests_test_output_pgsql_LDADD = libosm2pgsql.la
 tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
@@ -166,6 +169,7 @@ tests_test_output_multi_line_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_point_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_point_multi_table_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_polygon_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_hstore_match_only_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_options_LDADD += $(GLOBAL_LDFLAGS)
