--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ tests/test-output-multi-point-multi-table
 tests/test-output-multi-polygon
 tests/test-output-pgsql
 tests/test-expire-tiles
+tests/test-hstore-match-only
 tests/*.log
 tests/*.trs
 tests/test_output_pgsql_area_way.flat.nodes.bin
