--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(osm2pgsql, 0.87.2-dev)
+AC_INIT(osm2pgsql, 0.87.2)
 
 dnl Required autoconf version
 AC_PREREQ(2.61)
