Add basic multi-backend tag processing tests
These were created to try to debug #273, but they all pass. Regardless,
they make a good regression test of functionality without existing
coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ tests/test-middle-ram
 tests/test-middle-pgsql
 tests/test-pgsql-escape
 tests/test-parse-options
+tests/test-output-multi-tags
 tests/test-output-multi-line
 tests/test-output-multi-line-storage
 tests/test-output-multi-point
