Added test case for multi-backend and polygons from relations.
This seems to be a case which wasn't tested in isolation before,
so it's hard to tell what the expected behaviour should be. The
tested behaviour is that the tags on the output row(s) should be
processed through _both_ the filters for the relation and the
members.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ tests/test-output-multi-line-storage
 tests/test-output-multi-point
 tests/test-output-multi-point-multi-table
 tests/test-output-multi-polygon
+tests/test-output-multi-poly-trivial
 tests/test-output-pgsql
 tests/test-expire-tiles
 tests/*.log
