--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ tests/.dirstamp
 tests/test-parse-xml2
 tests/test-middle-ram
 tests/test-middle-pgsql
+tests/test-middle-flat
 tests/test-pgsql-escape
 tests/test-parse-options
 tests/test-output-multi-tags
