--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,7 @@ check_PROGRAMS = \
 	tests/test-output-multi-polygon \
 	tests/test-output-multi-poly-trivial \
 	tests/test-output-pgsql \
+	tests/test-output-pgsql-z_order \
 	tests/test-output-pgsql-tablespace \
 	tests/test-pgsql-escape \
 	tests/test-parse-options \
@@ -90,6 +91,8 @@ tests_test_output_pgsql_SOURCES = tests/test-output-pgsql.cpp tests/common-pg.cp
 tests_test_output_pgsql_LDADD = libosm2pgsql.la
 tests_test_output_pgsql_tablespace_SOURCES = tests/test-output-pgsql-tablespace.cpp tests/common-pg.cpp
 tests_test_output_pgsql_tablespace_LDADD = libosm2pgsql.la
+tests_test_output_pgsql_z_order_SOURCES = tests/test-output-pgsql-z_order.cpp tests/common-pg.cpp
+tests_test_output_pgsql_z_order_LDADD = libosm2pgsql.la
 tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
 tests_test_pgsql_escape_LDADD = libosm2pgsql.la
 tests_test_parse_options_SOURCES = tests/test-parse-options.cpp
@@ -155,6 +158,7 @@ tests_test_output_multi_polygon_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_multi_poly_trivial_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_tablespace_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_output_pgsql_z_order_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_options_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_expire_tiles_LDADD += $(GLOBAL_LDFLAGS)
