Update .gitignore for libosmium changes
Also removes some files from gitignore which no longer appear to be
generated.

--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,11 @@ aclocal.m4
 autom4te.cache/
 config.guess
 config.h.in
-config.h.in~
 config.sub
 configure
 compile
 depcomp
-fileformat.pb-c.c
-fileformat.pb-c.h
 install-sh
-legacy/Makefile.in
 ltmain.sh
 m4/libtool.m4
 m4/ltoptions.m4
@@ -22,17 +18,21 @@ m4/ltversion.m4
 m4/lt~obsolete.m4
 missing
 nodecachefilereader
-osmformat.pb-c.c
-osmformat.pb-c.h
 osm2pgsql
+
+contrib/protobuf/osmpbf/fileformat.pb.h
+contrib/protobuf/osmpbf/osmformat.pb.h
+fileformat.pb.cc
+fileformat.pb.h
+osmformat.pb.cc
+osmformat.pb.h
+
 
 Makefile
 config.h
 config.log
 config.nice
 config.status
-legacy/.deps/
-legacy/Makefile
 libtool
 .deps/
 stamp-h1
