--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,8 @@ dnl Allow maintainer mode to be disabled (debian build scripts do this)
 AM_MAINTAINER_MODE([enable])
 
 dnl use automake to generate standard Makefiles
-AM_INIT_AUTOMAKE([1.9.6 foreign dist-bzip2 std-options])
+AM_INIT_AUTOMAKE([1.11 foreign dist-bzip2 std-options])
+AM_SILENT_RULES([yes])
 
 dnl Additional macro definitions are in here
 AC_CONFIG_MACRO_DIR([m4])
