Treat warnings as errors in Travis with clang
g++ generates warnings in osmium, so we can't use -Werror there

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
   include:
     - os: linux
       compiler: clang
+      env: CXXFLAGS="-Werror"
     - os: linux
       compiler: gcc
 # update versions
