--- a/Makefile.am
+++ b/Makefile.am
@@ -133,7 +133,7 @@ CLEANFILES = \
 osm2pgsqldir = $(datadir)/osm2pgsql
 
 AM_CFLAGS = @PTHREAD_CFLAGS@ @LFS_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ @PROTOBUF_CFLAGS@ @ZLIB_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -DVERSION='"@PACKAGE_VERSION@"' @LUA_INCLUDE@
-AM_CPPFLAGS = -Icontrib/protobuf -Icontrib/libosmium @PTHREAD_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -Igeos-fallback @LUA_INCLUDE@ @BOOST_CPPFLAGS@
+AM_CPPFLAGS = -isystem contrib/protobuf -isystem contrib/libosmium @PTHREAD_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -isystem geos-fallback @LUA_INCLUDE@ @BOOST_CPPFLAGS@
 
 GLOBAL_LDFLAGS = @PTHREAD_CFLAGS@ @ZLIB_LDFLAGS@ @ZLIB_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @EXPAT_LDFLAGS@ @BZIP2_LDFLAGS@ @BZIP2_LIBS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROJ_LIBS@ @PROTOBUF_LIBS@ -L/usr/lib/x86_64-linux-gnu @EXPAT_LIBS@ @LUA_LIB@ @BOOST_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_THREAD_LIB@
 osm2pgsql_LDADD += $(GLOBAL_LDFLAGS)
