--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ before_script:
   - proj | head -n1
   - lua -v
 script:
-  ./autogen.sh && ./configure && make -j2 check TESTS=''
+  ./autogen.sh && ./configure && make -j2 check TESTS='' CXXFLAGS="-Werror -pedantic -Wall -std=c++11"
 after_failure:
   - cat config.log
   # rerun make, but verbosely
-  - make check TESTS='' V=1
+  - make check TESTS='' V=1 CXXFLAGS="-Werror -pedantic -Wall -std=c++11"
