--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ fileformat.pb.h
 osmformat.pb.cc
 osmformat.pb.h
 
-
 Makefile
 config.h
 config.log
@@ -67,3 +66,6 @@ tests/*.flat.nodes.bin
 .libs/
 *.lo
 libosm2pgsql.la
+
+docs/html
+docs/latex
