--- a/Makefile.am
+++ b/Makefile.am
@@ -57,7 +57,7 @@ check_PROGRAMS = \
 	tests/test-output-multi-poly-trivial \
 	tests/test-output-pgsql \
 	tests/test-output-pgsql-z_order \
-	tests/test-output-pgsql-tablespace \
+	tests/test-output-pgsql-schema \
 	tests/test-pgsql-escape \
 	tests/test-parse-options \
 	tests/test-expire-tiles \
@@ -93,6 +93,8 @@ tests_test_output_pgsql_tablespace_SOURCES = tests/test-output-pgsql-tablespace.
 tests_test_output_pgsql_tablespace_LDADD = libosm2pgsql.la
 tests_test_output_pgsql_z_order_SOURCES = tests/test-output-pgsql-z_order.cpp tests/common-pg.cpp
 tests_test_output_pgsql_z_order_LDADD = libosm2pgsql.la
+tests_test_output_pgsql_schema_SOURCES = tests/test-output-pgsql-schema.cpp tests/common-pg.cpp
+tests_test_output_pgsql_schema_LDADD = libosm2pgsql.la
 tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
 tests_test_pgsql_escape_LDADD = libosm2pgsql.la
 tests_test_parse_options_SOURCES = tests/test-parse-options.cpp
@@ -152,6 +154,7 @@ tests_test_output_multi_poly_trivial_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_tablespace_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_z_order_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_output_pgsql_schema_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_options_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_expire_tiles_LDADD += $(GLOBAL_LDFLAGS)
