--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ tests/test-middle-pgsql
 tests/test-middle-flat
 tests/test-pgsql-escape
 tests/test-options-parse
+tests/test-options-database
 tests/test-output-multi-tags
 tests/test-output-multi-line
 tests/test-output-multi-line-storage
