Add test for invalid geometry handling

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,7 @@ check_PROGRAMS = \
 	tests/test-output-pgsql-z_order \
 	tests/test-output-pgsql-tablespace \
 	tests/test-output-pgsql-schema \
+	tests/test-output-pgsql-validgeom \
 	tests/test-pgsql-escape \
 	tests/test-parse-options \
 	tests/test-expire-tiles \
@@ -96,6 +97,8 @@ tests_test_output_pgsql_z_order_SOURCES = tests/test-output-pgsql-z_order.cpp te
 tests_test_output_pgsql_z_order_LDADD = libosm2pgsql.la
 tests_test_output_pgsql_schema_SOURCES = tests/test-output-pgsql-schema.cpp tests/common-pg.cpp
 tests_test_output_pgsql_schema_LDADD = libosm2pgsql.la
+tests_test_output_pgsql_validgeom_LDADD = libosm2pgsql.la
+tests_test_output_pgsql_validgeom_SOURCES = tests/test-output-pgsql-validgeom.cpp tests/common-pg.cpp
 tests_test_pgsql_escape_SOURCES = tests/test-pgsql-escape.cpp
 tests_test_pgsql_escape_LDADD = libosm2pgsql.la
 tests_test_parse_options_SOURCES = tests/test-parse-options.cpp
@@ -156,6 +159,7 @@ tests_test_output_pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_tablespace_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_z_order_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_output_pgsql_schema_LDADD += $(GLOBAL_LDFLAGS)
+tests_test_output_pgsql_validgeom_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_pgsql_escape_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_options_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_expire_tiles_LDADD += $(GLOBAL_LDFLAGS)
