--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ tests/test-output-pgsql
 tests/test-output-pgsql-tablespace
 tests/test-output-pgsql-z_order
 tests/test-output-pgsql-schema
+tests/test-output-pgsql-validgeom
 tests/test-expire-tiles
 tests/test-hstore-match-only
 tests/*.log
