--- a/Makefile.am
+++ b/Makefile.am
@@ -112,36 +112,12 @@ TESTS = $(check_PROGRAMS) tests/regression-test.sh
 TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = sh
 
-libosm2pgsql_la_SOURCES += fileformat.pb.cc osmformat.pb.cc
-
-fileformat.pb.cc: contrib/protobuf/fileformat.proto
-	 $(AM_V_GEN) $(PROTOC) --proto_path=contrib/protobuf --cpp_out=. $<
-
-contrib/protobuf/osmpbf/fileformat.pb.h: fileformat.pb.cc
-	cp fileformat.pb.h $@
-
-osmformat.pb.cc: contrib/protobuf/osmformat.proto
-	 $(AM_V_GEN) $(PROTOC) --proto_path=contrib/protobuf --cpp_out=. $<
-
-contrib/protobuf/osmpbf/osmformat.pb.h: osmformat.pb.cc
-	cp osmformat.pb.h $@
-
-parse-osmium.cpp: contrib/protobuf/osmpbf/fileformat.pb.h contrib/protobuf/osmpbf/osmformat.pb.h
-
-BUILT_SOURCES = \
-  fileformat.pb.cc contrib/protobuf/osmpbf/fileformat.pb.h \
-  osmformat.pb.cc contrib/protobuf/osmpbf/osmformat.pb.h
-
-CLEANFILES = \
-  fileformat.pb.cc fileformat.pb.h contrib/protobuf/osmpbf/fileformat.pb.h \
-  osmformat.pb.cc osmformat.pb.h contrib/protobuf/osmpbf/osmformat.pb.h
-
 osm2pgsqldir = $(datadir)/osm2pgsql
 
-AM_CFLAGS = @PTHREAD_CFLAGS@ @LFS_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ @PROTOBUF_CFLAGS@ @ZLIB_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -DVERSION='"@PACKAGE_VERSION@"' @LUA_INCLUDE@
-AM_CPPFLAGS = -isystem contrib/protobuf -isystem contrib/libosmium @PTHREAD_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -isystem geos-fallback @LUA_INCLUDE@ @BOOST_CPPFLAGS@
+AM_CFLAGS = @PTHREAD_CFLAGS@ @LFS_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ @ZLIB_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -DVERSION='"@PACKAGE_VERSION@"' @LUA_INCLUDE@
+AM_CPPFLAGS = -isystem contrib/libosmium @PTHREAD_CFLAGS@ @POSTGRESQL_CPPFLAGS@ @EXPAT_CFLAGS@ @BZIP2_CFLAGS@ @GEOS_CFLAGS@ @PROJ_CFLAGS@ -DOSM2PGSQL_DATADIR='"$(osm2pgsqldir)"' -isystem geos-fallback @LUA_INCLUDE@ @BOOST_CPPFLAGS@
 
-GLOBAL_LDFLAGS = @PTHREAD_CFLAGS@ @ZLIB_LDFLAGS@ @ZLIB_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @EXPAT_LDFLAGS@ @BZIP2_LDFLAGS@ @BZIP2_LIBS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROJ_LIBS@ @PROTOBUF_LIBS@ -L/usr/lib/x86_64-linux-gnu @EXPAT_LIBS@ @LUA_LIB@ @BOOST_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_THREAD_LIB@
+GLOBAL_LDFLAGS = @PTHREAD_CFLAGS@ @ZLIB_LDFLAGS@ @ZLIB_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @EXPAT_LDFLAGS@ @BZIP2_LDFLAGS@ @BZIP2_LIBS@ @GEOS_LDFLAGS@ @GEOS_LIBS@ @PROJ_LDFLAGS@ @PROJ_LIBS@ -L/usr/lib/x86_64-linux-gnu @EXPAT_LIBS@ @LUA_LIB@ @BOOST_LDFLAGS@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @BOOST_THREAD_LIB@
 osm2pgsql_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_parse_xml2_LDADD += $(GLOBAL_LDFLAGS)
 tests_test_middle_ram_LDADD += $(GLOBAL_LDFLAGS)
@@ -171,8 +147,6 @@ man1_MANS = docs/osm2pgsql.1 docs/nodecachefilereader.1
 
 EXTRA_DIST = osm2pgsql.spec.in \
              osm2pgsql.spec \
-             contrib/protobuf/fileformat.proto \
-             contrib/protobuf/osmformat.proto \
              debian \
              $(osm2pgsql_DATA)
 
