Better implementation using RAII to ensure that the file is removed even under exception conditions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -71,7 +71,7 @@ tests_test_middle_ram_SOURCES = tests/test-middle-ram.cpp tests/middle-tests.cpp
 tests_test_middle_ram_LDADD = libosm2pgsql.la
 tests_test_middle_pgsql_SOURCES = tests/test-middle-pgsql.cpp tests/middle-tests.cpp tests/common-pg.cpp
 tests_test_middle_pgsql_LDADD = libosm2pgsql.la
-tests_test_middle_flat_SOURCES = tests/test-middle-flat.cpp tests/middle-tests.cpp tests/common-pg.cpp
+tests_test_middle_flat_SOURCES = tests/test-middle-flat.cpp tests/middle-tests.cpp tests/common-pg.cpp tests/common-cleanup.cpp
 tests_test_middle_flat_LDADD = libosm2pgsql.la
 tests_test_output_multi_tags_SOURCES = tests/test-output-multi-tags.cpp tests/common-pg.cpp
 tests_test_output_multi_tags_LDADD = libosm2pgsql.la
@@ -89,7 +89,7 @@ tests_test_hstore_match_only_SOURCES = tests/test-hstore-match-only.cpp tests/co
 tests_test_hstore_match_only_LDADD = libosm2pgsql.la
 tests_test_output_multi_poly_trivial_SOURCES = tests/test-output-multi-poly-trivial.cpp tests/common-pg.cpp
 tests_test_output_multi_poly_trivial_LDADD = libosm2pgsql.la
-tests_test_output_pgsql_SOURCES = tests/test-output-pgsql.cpp tests/common-pg.cpp
+tests_test_output_pgsql_SOURCES = tests/test-output-pgsql.cpp tests/common-pg.cpp tests/common-cleanup.cpp
 tests_test_output_pgsql_LDADD = libosm2pgsql.la
 tests_test_output_pgsql_tablespace_SOURCES = tests/test-output-pgsql-tablespace.cpp tests/common-pg.cpp
 tests_test_output_pgsql_tablespace_LDADD = libosm2pgsql.la
