Rename area tests to be more consistent with others

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ tests/test-output-pgsql
 tests/test-output-pgsql-tablespace
 tests/test-output-pgsql-z_order
 tests/test-output-pgsql-schema
+tests/test-output-pgsql-area
 tests/test-expire-tiles
 tests/test-hstore-match-only
 tests/*.log
