--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,7 @@
-*.o
-*~
-Makefile.in
-aclocal.m4
-autom4te.cache/
-config.guess
-config.h.in
-config.sub
-configure
-compile
-depcomp
-install-sh
-ltmain.sh
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
-missing
 nodecachefilereader
 osm2pgsql
 
-Makefile
-config.h
-config.log
-config.nice
-config.status
-libtool
-.deps/
-stamp-h1
-INSTALL
+build
 
 log
 test-driver
@@ -57,10 +30,6 @@ tests/test-hstore-match-only
 tests/*.log
 tests/*.trs
 tests/*.flat.nodes.bin
-
-.libs/
-*.lo
-libosm2pgsql.la
 
 docs/html
 docs/latex
