Enable BUILD_TESTS by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 SET(DATA_DIR \".\")
 
-OPTION(BUILD_TESTS "Build test suite" OFF)
+OPTION(BUILD_TESTS "Build test suite" ON)
 
 if (NOT TESTING_TIMEOUT)
   set(TESTING_TIMEOUT 1200)
