Install node-persistent-cache-reader executable & manpage too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -264,3 +264,7 @@ endif()
 install(TARGETS osm2pgsql DESTINATION bin)
 install(FILES docs/osm2pgsql.1 DESTINATION share/man/man1)
 install(FILES default.style empty.style 900913.sql DESTINATION share/osm2pgsql)
+if (HAVE_SYS_TIME_H)
+  install(TARGETS node-persistent-cache-reader DESTINATION bin)
+  install(FILES docs/node-persistent-cache-reader.1 DESTINATION share/man/man1)
+endif()
