Don't let invalid geometries into the database
Sometimes even after buffer(0), a geometry is invalid.
In these cases, don't produce a geometry, but instead
skip it.

Fixes #427

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TESTS
   test-output-pgsql-area.cpp
   test-output-pgsql-schema.cpp
   test-output-pgsql-tablespace.cpp
+  test-output-pgsql-validgeom.cpp
   test-output-pgsql-z_order.cpp
   test-output-pgsql.cpp
   test-parse-diff.cpp
