persistent store: catch invalid location exception
Invalid location is entirely expected, for example when updating
extract data. Also adds tests for the node store and sligtly
changes clang-format style with respect to templates.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -28,6 +28,7 @@ set(TESTS
   test-output-pgsql.cpp
   test-parse-diff.cpp
   test-parse-xml2.cpp
+  test-persistent-node-cache.cpp
   test-pgsql-escape.cpp
   test-wildcard-match.cpp
 )
