remove geometry builder and geos dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
-find_package(Osmium REQUIRED COMPONENTS io geos proj)
+find_package(Osmium REQUIRED COMPONENTS io proj)
 include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS})
 
 if (WITH_LUA)
@@ -167,7 +167,6 @@ endif()
 
 set(osm2pgsql_lib_SOURCES
   expire-tiles.cpp
-  geometry-builder.cpp
   geometry-processor.cpp
   id-tracker.cpp
   middle-pgsql.cpp
@@ -196,7 +195,6 @@ set(osm2pgsql_lib_SOURCES
   util.cpp
   wildcmp.cpp
   expire-tiles.hpp
-  geometry-builder.hpp
   geometry-processor.hpp
   id-tracker.hpp
   middle-pgsql.hpp
@@ -206,6 +204,7 @@ set(osm2pgsql_lib_SOURCES
   node-ram-cache.hpp
   options.hpp
   osmdata.hpp
+  osmium-builder.hpp
   osmtypes.hpp
   output-gazetteer.hpp
   output-multi.hpp
@@ -225,6 +224,7 @@ set(osm2pgsql_lib_SOURCES
   tagtransform.hpp
   util.hpp
   wildcmp.hpp
+  wkb.hpp
 )
 
 add_library(osm2pgsql_lib STATIC ${osm2pgsql_lib_SOURCES})
